@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.234 2005/09/16 14:44:11 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.235 2005/09/19 09:41:37 fanf2 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -202,6 +202,10 @@ TF/05 The fix for PH/43 was not completely correct; widen_domains is always
 PH/48 A number of further additions for the benefit of the new test suite,
       including a fake gethostbyname() that interfaces to the fake DNS resolver
       (see PH/47 above).
+
+TF/06 The fix for widen_domains has also been applied to qualify_single and
+      search_parents which are the other dnslookup options that can cause
+      header rewrites.
 
 
 Exim version 4.52
